// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPane calls \`swap\` onChange 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  "setPassword",
  "newUser",
  "policy",
]
`;

exports[`PasswordPane disables input when submitting 1`] = `
<div
  data-__type="password_input"
  data-disabled={true}
  data-invalidHint="blankErrorHint"
  data-isValid={false}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-policy="policy"
  data-strengthMessages={Object {}}
  data-value="password"
/>
`;

exports[`PasswordPane renders correctly 1`] = `
<div
  data-__type="password_input"
  data-disabled={false}
  data-invalidHint="blankErrorHint"
  data-isValid={false}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-policy="policy"
  data-strengthMessages={Object {}}
  data-value="password"
/>
`;

exports[`PasswordPane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<div
  data-__type="password_input"
  data-disabled={false}
  data-invalidHint="blankErrorHint"
  data-isValid={true}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-policy="policy"
  data-strengthMessages={Object {}}
  data-value="password"
/>
`;
